@@ -2882,6 +2882,7 @@ pts
 ptv
 pty
 pulizzi
+purelib
 pv
 pw
 pwd
