@@ -174,6 +174,9 @@ several `FSD` notifications into one executed action. [PR #3097]
    to match the driver program name. Follow-up from slightly botched renaming
    in original contribution. [PR #545]
 
+ - The `configure` script should now try harder to report specifically
+   the "purelib" location as `PYTHON*_SITE_PACKAGES`. [#1209]
+
 
 Release notes for NUT 2.8.4 - what's new since 2.8.3
 ----------------------------------------------------
